@@ -1643,6 +1643,7 @@ class BasicTinUI(Canvas):
             mode='y'
         else:
             return None
+        use_widget=True#是否允许控件控制滚动条
         #上标、下标 ▲▼
         if mode=='y':
             back=self.create_polygon((pos[0]+5,pos[1]+5,pos[0]+5,pos[1]+height-5,pos[0]+5,pos[1]+5),
@@ -1677,7 +1678,6 @@ class BasicTinUI(Canvas):
         self.tag_bind(uid,'<Enter>',all_enter)
         self.tag_bind(uid,'<Leave>',all_leave)
         all_leave(None)
-        use_widget=True#是否允许控件控制滚动条
         self.tag_bind(sc,'<Button-1>',mousedown)
         self.tag_bind(sc,'<ButtonRelease-1>',mouseup)
         self.tag_bind(sc,'<B1-Motion>',drag)
@@ -2401,11 +2401,37 @@ class BasicTinUI(Canvas):
                 textid=boxes[sel][2]
                 text=self.itemcget(textid,'text')
                 command(text)
+        def active():
+            #激活按钮
+            count=0
+            for item in boxes:
+                if count==select:
+                    self.itemconfig(item[0],fill=onfg)
+                    self.itemconfig(item[1],fill=onbg)
+                else:
+                    self.itemconfig(item[0],fill=bg)
+                    self.itemconfig(item[1],fill=fg)
+                self.itemconfig(item[2],fill=fontfg)
+                count+=1
+            self.itemconfig(uid,state='normal')
+        def disable(fg='#c1c1c1',bg='#f3f3f3'):
+            #禁用按钮
+            self.itemconfig(uid,state='disabled')
+            count=0
+            for item in boxes:
+                if count==select:
+                    self.itemconfig(item[0],fill=fg)
+                    self.itemconfig(item[1],fill=bg)
+                else:
+                    self.itemconfig(item[0],fill=bg)
+                    self.itemconfig(item[1],fill=fg)
+                self.itemconfig(item[2],fill=fg)
+                count+=1
         #标识符内部宽度width和边框宽度line
         back_width=18
         back_line=2#16+2*2=20
         #active... = back...
-        boxes=[]#[(sign_id,text_id,back_id),...]，换行为(None,'\n',None)
+        boxes=[]#[(sign_back_id,sign_id,text_id,back_id),...]，换行为(None,'\n',None)
         nowx,nowy=pos#x坐标为左上角插入坐标，y坐标为底部坐标
         uid='radiobox'+str(id(pos))
         select=-1#当前选定
@@ -2439,7 +2465,10 @@ class BasicTinUI(Canvas):
             self.tag_bind(back,'<Button-1>',lambda event,sel=count,sign=sign,sback=sign_back:sel_it(sel,sign,sback))
             nowx=t_bbox[2]+padx
         self.__auto_anchor(uid,pos,anchor)
-        return boxes,uid
+        funcs=FuncList(2)
+        funcs.active=active
+        funcs.disable=disable
+        return boxes,funcs,uid
 
     def add_pivot(self,pos:tuple,fg='#959595',bg='',activefg='#525252',activecolor='#5969e0',content=(('a-title','tag1'),('b-title','tag2'),'',('c-title','tag3')),font='微软雅黑 16',padx=10,pady=10,anchor='nw',command=None):#绘制支点标题
         def button_in(num,text_uid):
