@@ -5,6 +5,13 @@
 ==========更新日志==========
 
 
+==========5.9==========
+2024-10-6
+1. 增加extension拓展包，支持按钮化控件
+2. radiobox增加funcs返回值
+3. TinUITheme（明亮/暗黑）统一背景配色
+4. 修复滚动条初始化可能导致的错误
+
 ==========5.8==========
 2024-8-28
 1. button2, barbutton优化有图标无文字的排版
